# vllm-hust-perf-analyzer

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  OPEN_SOURCE_REFACTOR_PLAN.md  README.md  README.zh.md  pyproject.toml  run_decode_a2a_buffer_reuse.sh
docs/: architecture.md  augmented-db-schema.md  augmented-perfetto-timeline.md  input-profiles.md  output-schema.md  reference-reproduction.md  traceloom-intro-slides.zh.md  tree-map-guide.zh.md
docs/report-sql/: anchor-aux.sql  node-cost-breakdown.sql  node-events.sql  node-occurrences.sql  repeat-children.sql  repeat-overview.sql  tree-map.sql
examples/: README.md
examples/configs/: ascend_msprof_vllm_decode.yaml  cuda_nsys_torchrun.yaml
examples/workloads/: README.md  vllm_ascend_smoke.py
examples/workloads/pytorch_ddp_matmul/: train.py
patches/: attention_boundary_vectorization.patch
reproduce/: README.md  __init__.py  decode_a2a_buffer_reuse.py  run_reference.py
reproduce/decode_a2a_buffer_reuse/: README.md  common.sh  decode_a2a_buffer_reuse.diff  env.example  run_ab_benchmark.sh  run_profile_pair.sh
scripts/: traceloom-analyze.sh
traceloom/: README.md  __init__.py  augmented_db.py  cli.py  compute_prelude_timeline.py  loop_tree.py  msprof_reader.py  report.py  score_view.py
traceloom/io/: __init__.py  discover.py
