[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traceloom"
version = "0.1.0"
description = "Lightweight offline analyzer for accelerator profiler timelines."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "TraceLoom contributors" }
]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: System :: Monitoring",
]
dependencies = []

[project.scripts]
traceloom = "traceloom.cli:main"
traceloom-score-view = "traceloom.score_view:main"
traceloom-reproduce = "reproduce.run_reference:main"
traceloom-reproduce-decode-a2a = "reproduce.decode_a2a_buffer_reuse:main"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["traceloom*", "reproduce*"]
